# oscar-order-system

./: .env  .gitignore  db.sqlite3  main.py  pyproject.toml  requirements.txt
apps/accounts/: admin.py  apps.py  models.py
apps/accounts/migrations/: 0001_initial.py  (+1 more)
apps/notifications/: admin.py  apps.py  models.py
apps/orders/: admin.py  apps.py  models.py
bot/: loader.py  states.py  urls.py  views.py
bot/handlers/: __init__.py  admin_handler.py  agronomist.py  client.py  common.py  sales.py
bot/keyboards/: admin_kb.py  agronomist_kb.py  client_kb.py  sales_kb.py
bot/utils/: helpers.py  state_manager.py
bot_app/: apps.py  urls.py  views.py
bot_app/core/: callback_factories.py  loader.py  use_states.py
bot_app/decorator/: __init__.py  handle.py  keyboard.py  sender.py
bot_app/filters/: __init__.py  callback_filter.py  is_admin_filter.py  is_agronomist_filter.py  is_client_filter.py  is_sales_filter.py  role_filter.py
bot_app/handlers/: __init__.py  agronomist.py  client.py  common.py  keyboard.py  sales.py  text_router.py
bot_app/keyboards/: admin_kb.py  agronomist_kb.py  base.py  client_kb.py  sales_kb.py
bot_app/states/: client_states.py
bot_app/utils/: helpers.py  state_manager.py
bots/: apps.py  urls.py  views.py
bots/base/: decorator.py  filters.py  sender.py
bots/client_bot/: loader.py  states.py
bots/main_bot/: loader.py  states.py
config/: celery.py  settings.py  urls.py
core/: callbacks.py  environ.py  helpers.py  i18n.py  locks.py  redis_client.py  redis_storage.py
tasks/: retreatment.py
(+40 files in other folders)
