[project]
name = "oscar-agro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.5",
    "celery>=5.6.3",
    "django>=6.0.3",
    "django-celery-beat>=2.9.0",
    "gunicorn>=25.3.0",
    "pillow>=12.2.0",
    "psycopg2>=2.9.11",
    "pytelegrambotapi>=4.32.0",
    "python-decouple>=3.8",
    "redis>=7.4.0",
    "uvicorn[standard]>=0.44.0",
    "whitenoise>=6.12.0",
]
