[project]
name = "oscar-agro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp==3.9.3",
    "celery==5.3.6",
    "django==4.2.11",
    "django-celery-beat==2.6.0",
    "gunicorn==21.2.0",
    "pillow==10.2.0",
    "psycopg2>=2.9.11",
    "psycopg2-binary==2.9.9",
    "pydantic-settings>=2.13.1",
    "pytelegrambotapi>=4.32.0",
    "python-decouple==3.8",
    "redis==5.0.3",
    "uvicorn[standard]==0.27.1",
    "whitenoise==6.6.0",
]
